--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint": "^8.38.0",
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.3",
+    "lint-staged": "^13.2.1",
     "prettier": "^2.8.7"
   }
 }
